[package]
name = "bintray"
version = "0.5.0"
authors = ["Jean-Sébastien Pédron <jean-sebastien@rabbitmq.com>"]

[dependencies]
# Use of the HTTP REST API.
hyper = "0.11"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.2.1"

# Error handling.
failure = "0.1"
failure_derive = "0.1"

# Logging.
log = "0.4"

chrono = "0.4"
itertools = "0.7"
libflate = "0.1"
sha-1 = "0.7"
sha2 = "0.7"
version-compare = "0.0.6"

[dev-dependencies]
env_logger = "0.5"
nanoid = "0.2"
tempfile = "3"

[dependencies.digest]
version = "0.7"
features = ["std"]
